Admin/Resources/Assets/Css/style.css
/* ... */
.dark .card {
  background-color: var(--dark-secondary);
}
.card-title {
  margin-bottom: 0.5rem;
  display: flex;
  justify-content: space-between;
}
/* GRID LAYOUT */
.grid-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-2 {
    display: grid;
  }
}
.grid-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-3 {
    display: grid;
  }
}
.grid-4 {
  grid-template-columns: repeat(4, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-4 {
    display: grid;
  }
}
.grid-5 {
  grid-template-columns: repeat(5, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-5 {
    display: grid;
  }
}
.grid-6 {
  grid-template-columns: repeat(6, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-6 {
    display: grid;
  }
}
.grid-7 {
  grid-template-columns: repeat(7, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-7 {
    display: grid;
  }
}
.grid-8 {
  grid-template-columns: repeat(8, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-8 {
    display: grid;
  }
}
.grid-9 {
  grid-template-columns: repeat(9, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-9 {
    display: grid;
  }
}
.grid-10 {
  grid-template-columns: repeat(10, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-10 {
    display: grid;
  }
}
.grid-11 {
  grid-template-columns: repeat(11, minmax(0, 1fr));
  gap: 1.5rem;
}
@media (min-width: 1024px) {

  .grid-11 {
    display: grid;
  }
}
.grid-12 {
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: 3rem;
}
@media (min-width: 1024px) {

  .grid-12 {
    display: grid;
  }
}
/* FLEX LAYOUT */
.center-flex {
  justify-content: center;
}
@media (min-width: 1024px) {

  .center-flex {
    display: flex;
  }

  .flex-content-2xl {
    width: 80%;
  }

  .flex-content-xl {
    width: 66.666667%;
  }

  .flex-content-lg {
    width: 50%;
  }

  .flex-content {
    width: 33.333333%;
  }

  .flex-content-sm {
    width: 25%;
  }
}
/* INPUT */
label {
  display: block;
  font-weight: 500;
}
.input-xl {
  margin-bottom: 0.5rem;
  display: block;
  width: 100%;
  border-radius: 0.5rem;
  border-width: 1px;
  border-color: var(--light-third);
  background-color: var(--light-input-bg);
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}
.input-xl:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.dark .input-xl {
  border-color: var(--dark-text-secondary);
  background-color: var(--dark-input-bg);
}
.dark .input-xl::-moz-placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .input-xl::placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .input-xl:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.input {
  margin-bottom: 0.5rem;
  display: block;
  width: 100%;
  border-radius: 0.5rem;
  border-width: 1px;
  border-color: var(--light-third);
  background-color: var(--light-input-bg);
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}
.input:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.dark .input {
  border-color: var(--dark-text-secondary);
  background-color: var(--dark-input-bg);
}
.dark .input::-moz-placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .input::placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .input:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.\!input {
  margin-bottom: 0.5rem;
  display: block;
  width: 100%;
  border-radius: 0.5rem;
  border-width: 1px;
  border-color: var(--light-third);
  background-color: var(--light-input-bg);
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}
.\!input:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.dark .\!input {
  border-color: var(--dark-text-secondary);
  background-color: var(--dark-input-bg);
}
.dark .\!input::-moz-placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .\!input::placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
}
.dark .\!input:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.input-sm {
  margin-bottom: 0.5rem;
  display: block;
  width: 100%;
  border-radius: 0.5rem;
  border-width: 1px;
  border-color: var(--light-third);
  background-color: var(--light-input-bg);
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}
.input-sm:focus {
  --tw-border-opacity: 1;
  border-color: rgb(63 131 248 / var(--tw-border-opacity));
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
}
.dark .input-sm {
  border-color: var(--dark-text-secondary);
  background-color: var(--dark-input-bg);
}
/* ... */

